--- a/English.lproj/Layout.xib
+++ b/English.lproj/Layout.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment defaultVersion="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5056"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MVDocument">
@@ -18,8 +19,8 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
-        <window title="Mach-O Browser" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" animationBehavior="default" id="3" userLabel="Window">
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
+        <window title="Mach-O Browser" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" animationBehavior="default" id="3" userLabel="Window">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" texturedBackground="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="142" y="376" width="900" height="400"/>
@@ -71,13 +72,12 @@
                                                     </connections>
                                                 </outlineView>
                                             </subviews>
-                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </clipView>
-                                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="23">
+                                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="23">
                                             <rect key="frame" x="1" y="330" width="314" height="15"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="22">
+                                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="22">
                                             <rect key="frame" x="315" y="1" width="15" height="329"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
@@ -92,7 +92,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="619" height="346"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <clipView key="contentView" id="ZUp-eR-65q">
-                                            <rect key="frame" x="1" y="17" width="617" height="328"/>
+                                            <rect key="frame" x="1" y="0.0" width="617" height="345"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
                                                 <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" autosaveColumns="NO" headerView="9" id="10" userLabel="Details Table" customClass="MVTableView">
@@ -163,13 +163,12 @@
                                                     </connections>
                                                 </tableView>
                                             </subviews>
-                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </clipView>
-                                        <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="11">
+                                        <scroller key="horizontalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="YES" id="11">
                                             <rect key="frame" x="1" y="534" width="442" height="15"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
-                                        <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="12">
+                                        <scroller key="verticalScroller" hidden="YES" wantsLayer="YES" verticalHuggingPriority="750" horizontal="NO" id="12">
                                             <rect key="frame" x="397" y="17" width="15" height="415"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </scroller>
@@ -203,11 +202,11 @@
                     <segmentedControl verticalHuggingPriority="750" id="109">
                         <rect key="frame" x="46" y="374" width="196" height="24"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                        <segmentedCell key="cell" refusesFirstResponder="YES" state="on" alignment="left" style="rounded" trackingMode="selectOne" id="110">
+                        <segmentedCell key="cell" scrollable="YES" lineBreakMode="clipping" refusesFirstResponder="YES" state="on" borderStyle="border" alignment="left" style="rounded" trackingMode="selectOne" id="110">
                             <font key="font" metaFont="system"/>
                             <segments>
-                                <segment label="RAW" image="redApple" width="95" selected="YES"/>
-                                <segment label="RVA" image="greenApple" width="94" tag="1"/>
+                                <segment label="RAW" width="95" selected="YES"/>
+                                <segment label="RVA" width="94" tag="1"/>
                             </segments>
                         </segmentedCell>
                         <connections>
@@ -248,8 +247,6 @@
         <customObject id="28" customClass="MVDataSourceDetails"/>
     </objects>
     <resources>
-        <image name="greenApple" width="512" height="512"/>
-        <image name="redApple" width="512" height="512"/>
         <image name="stop" width="64" height="64"/>
     </resources>
 </document>
